--- a/Nokia/CMakeLists.txt
+++ b/Nokia/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (Nokia "Nokia.cpp" )
+add_executable (Nokia "Nokia.cpp"  "CSVParser.h" "CSVParser.cpp")
 
 # TODO: Add tests and install targets if needed.
